--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h2 class="project-tagline"></h2>
     </section>
 
-  <h1>This is lumia's first github repository.</h1>
+  <h1 text-align="center">This is lumia's first github repository.</h1>
 
   
   </body>
