--- a/index.html
+++ b/index.html
@@ -263,8 +263,8 @@
 </div>
 
 
-<script src="../bootstrap-3.3.6-dist/js/jquery-1.12.3.min.js"></script>
-<script src="../bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
+<script src="js/jquery-1.12.3.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 <script>
 $(document).ready(function(){
      $("#demo-navbar .dropdown-menu a").click(function(){
